View Issue Details
ID | Project | Category | View Status | Date Submitted | Last Update |
---|---|---|---|---|---|
0024083 | Open CASCADE | OCCT:Modeling Algorithms | public | 2013-07-23 11:45 | 2013-12-19 13:57 |
Reporter | vro | Assigned To | bugmaster | ||
Priority | normal | Severity | minor | ||
Status | closed | Resolution | fixed | ||
Platform | Windows | OS | VC++ 2010 | ||
Product Version | 6.6.0 | ||||
Target Version | 6.7.0 | Fixed in Version | 6.7.0 | ||
Summary | 0024083: BRepCheck_Wire crashes processing a wire consisting of many edges | ||||
Description | The attached wire consists of 100 000 linear edges. The class BRepCheck_Wire failes to analyse the wire. | ||||
Steps To Reproduce | #Load the attached wire. restore polyline.brep s #Call BRepCheck_Wire to check validity of the wire. checkshape s | ||||
Tags | No tags attached. | ||||
Test case number | bugs modalg_5(010) bug24083 | ||||
|
Dear Ifv, Review please my modification. I replaced a recursive method Propagate() in the class BRepCheck_Wire by a non-recursive method. Non-regression tests passed well. Thanks, Vro |
|
Ok |
|
polyline.zip (1,416,258 bytes) |
|
Branch CR24083 (and products from GIT master) was compiled on Linux and Windows platforms and tested. SHA-1: 9a8e1d7388ed73fe3d4ec6279f287db27878639e Number of compiler warnings: occt component : Linux: 923 (917 on master) Windows: 862 (855 on master) products component : Linux: 190 (188 on master) Windows: 287 (287 on master) Regressions: http://occt-tests/CR24083-master-occt/Debian60-64/bugs/modalg_2/bug307_1.html http://occt-tests/CR24083-master-occt/Debian60-64/bugs/modalg_2/bug307_2.html http://occt-tests/CR24083-master-occt/Windows-32-VC9/bugs/modalg_2/bug307_1.html http://occt-tests/CR24083-master-occt/Windows-32-VC9/bugs/modalg_2/bug307_2.html bugs modalg_2(007) bug307_1, bug307_2 - BAD. Improvements: No improvements Testing cases: bugs modalg_5(010) bug24083: OK Testing on Linux: Total MEMORY difference: 363467472 / 363206424 Total CPU difference: 55842.140000000836 / 49185.290000000496 Testing on Windows: Total MEMORY difference: 424310136 / 424079384 Total CPU difference: 38489.703125 / 32931.203125 There are not differences in images found by testdiff. |
|
Corrected. Same branch: CR24083. |
|
Dear BugMaster, Branch CR24083 (and products from GIT master) was compiled on Linux and Windows platforms and tested. SHA-1: befdff63e41d543b9ad08b8bb350b0fd4aa11a56 Number of compiler warnings: occt component : Linux: 916 (917 on master) Windows: 855 (855 on master) products component : Linux: 188 (188 on master) Windows: 287 (287 on master) Regressions: No regressions Improvements: No improvements Testing cases: bugs modalg_5(010) bug24083: OK Testing on Linux: Total MEMORY difference: 363647304 / 363272428 Total CPU difference: 44620.65000000041 / 49185.7300000005 Testing on Windows: Total MEMORY difference: 421950984 / 421870816 Total CPU difference: 39707.34375 / 31550.171875 There are not differences in images found by testdiff. |
occt: master 22774b62 2013-08-22 08:59:16 Committer: bugmaster Details Diff |
0024083: BRepCheck_Wire crashes processing a wire consisting of many edges A check on 0 is added. A recursive method Propagate() is replaced by a non-recursive implementation. Adding test case for issue CR24083 |
Affected Issues 0024083 |
|
mod - src/BRepCheck/BRepCheck_Wire.cxx | Diff File | ||
add - tests/bugs/modalg_5/bug24083 | Diff File |
Date Modified | Username | Field | Change |
---|---|---|---|
2013-07-23 11:45 | vro | New Issue | |
2013-07-23 11:45 | vro | Assigned To | => vro |
2013-07-23 11:45 | vro | File Added: polyline.zip | |
2013-07-23 11:54 | vro | Note Added: 0025133 | |
2013-07-23 11:54 | vro | Assigned To | vro => ifv |
2013-07-23 11:54 | vro | Status | new => resolved |
2013-08-12 16:47 |
|
Note Added: 0025286 | |
2013-08-12 16:47 |
|
Status | resolved => reviewed |
2013-08-12 18:26 |
|
Assigned To | ifv => mkv |
2013-08-13 11:30 | vro | File Deleted: polyline.zip | |
2013-08-13 11:30 | vro | File Added: polyline.zip | |
2013-08-13 14:56 |
|
Note Added: 0025294 | |
2013-08-13 14:57 |
|
Test case number | => bugs modalg_5(010) bug24083 |
2013-08-13 14:57 |
|
Assigned To | mkv => vro |
2013-08-13 14:57 |
|
Status | reviewed => assigned |
2013-08-16 08:31 | vro | Note Added: 0025325 | |
2013-08-16 08:31 | vro | Assigned To | vro => mkv |
2013-08-16 12:47 |
|
Status | assigned => resolved |
2013-08-16 12:47 |
|
Status | resolved => reviewed |
2013-08-16 15:50 |
|
Note Added: 0025333 | |
2013-08-16 15:51 |
|
Assigned To | mkv => bugmaster |
2013-08-16 15:51 |
|
Status | reviewed => tested |
2013-08-22 11:06 | bugmaster | Target Version | Unscheduled => 6.7.0 |
2013-08-23 14:11 | bugmaster | Changeset attached | => occt master 22774b62 |
2013-08-23 14:11 | bugmaster | Status | tested => verified |
2013-08-23 14:11 | bugmaster | Resolution | open => fixed |
2013-12-19 13:52 | bugmaster | Status | verified => closed |
2013-12-19 13:57 | bugmaster | Fixed in Version | => 6.7.0 |