0024083: BRepCheck_Wire crashes processing a wire consisting of many edges

A check on 0 is added.
A recursive method Propagate() is replaced by a non-recursive implementation.
Adding test case for issue CR24083